src/public/static/style.css
/* ... */
#section-search .font-item:last-child {
    border-bottom: none;
}

a.font-item:hover {
    color: var(--slate-100);
    background: var(--slate-800);
    cursor: pointer;
}

.font-preview {
    font-size: 3rem;
    white-space: nowrap;
    overflow: hidden;
    position: relative;
    transition: color 0.3s ease-out;
    font-family: serif;
    color: transparent;
}
.font-item:has(.font-preview:focus)::after {
    display: none;
}
.font-preview:focus {
    outline: auto 2px var(--slate-500);
    white-space: unset;
    overflow: unset;
}

.font-item:after {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    width: 2em;
    height: 100%;
    background: linear-gradient(to left, var(--slate-900) 0%, transparent 100%);
}

.font-title {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    gap: 1rem;
    margin-bottom: 1rem;
    position: relative;
    z-index: 2;
}

.font-item h3 {
    font-size: 1.1rem;
    font-weight: 500;
}

.weight {
    color: var(--slate-400);
    font-weight: 500;
}

.T {
    font-weight: 100;
}

.EL {
    font-weight: 200;
}

.L {
    font-weight: 300;
}

.N {
    font-weight: 350;
}

.R {
    font-weight: 400;
}

.M {
    font-weight: 500;
}

.SM {
    font-weight: 600;
}

.B {
    font-weight: 700;
}

.EB {
    font-weight: 800;
}

.H {
    font-weight: 900;
}

.font-actions {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin-bottom: 1.5rem;
}

.font-class {
    color: var(--slate-400);
    --background: var(--slate-700);
    background-color: var(--background);
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0.5rem 0.75rem;
    flex: 1;
    overflow: hidden;
    border-radius: 5rem;
    cursor: pointer;
    transition: background-color 0.3s ease-out;
}

.font-class:hover {
    --background: var(--slate-600);
}

.font-class div {
    flex-shrink: 1;
    overflow: hidden;
    white-space: nowrap;
    position: relative;
}
.font-class div:first-child:after {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    width: 2em;
    height: 100%;
    background: linear-gradient(to left, var(--background) 0%, transparent 100%);
}

.font-actions a,
#copyClass {
    flex-shrink: 0;
}
.font-actions img {
    height: 1.3rem;
    width: 1.3rem;
    object-fit: contain;
}

#copyClass {
    width: 0.75rem;
    height: 0.9375rem;
    background: url("/static/img/copy.svg") no-repeat center center / contain;
    color: transparent;
}

.font-tags,
.font p {
    margin-bottom: 1.2rem;
}

.font .font-description {
    margin-bottom: 0.8rem;
}

.font p {
    color: var(--slate-400);
}

.font-coverage label {
    display: block;
    margin-bottom: 0.5rem;
}

.coverage-bar {
    width: 100%;
    height: 1rem;
    border-radius: 0.5rem;
    background-color: var(--slate-700);
    margin-bottom: 1rem;
    background: linear-gradient(to right, var(--slate-500) 0%, var(--slate-500) var(--percent), var(--slate-700) var(--percent), var(--slate-700) 100%);
}

#section-font {
    flex-direction: column;
    justify-content: space-between;
}

#section-font h2 {
    font-size: 1.5rem;
}

.first-time {
    background-color: var(--slate-600);
    margin: 2rem;
    padding: 2rem;
}

.first-time p {
    color: var(--slate-200);
    margin-bottom: 0;
}

footer {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    padding: 2rem;
    gap: 2rem;
}

.font footer p {
    margin-bottom: 0;
    max-width: 35rem;
}

.footer-logo {
    width: 5rem;
}

.footer-zeabur {
    margin-left: auto;
}

.footer-zeabur img {
    width: 14rem;
}

#bulletin {
    display: none;
    position: fixed;
    bottom: 1rem;
    left: 1rem;
    width: 19rem;
    max-width: calc(100% - 2rem);
    padding: 2rem 2rem;
    z-index: 999;
    background-color: var(--slate-800);
    border: 1px solid var(--slate-700);
}
#closeBulletin {
    position: absolute;
    top: 0.5rem;
    right: 0.5rem;
    width: 1rem;
    height: 1rem;
    background: url("/static/img/x.svg") no-repeat center center / contain;
    cursor: pointer;
}

@media (max-width: 50rem) {
    header {
        transform: translateX(-100%);
        height: 100vh;
        padding: 2rem 1.5rem;
        border-right: none;
        transition: transform 0.3s ease-in-out;
        position: fixed;
        max-width: calc(100% - 3rem);
    }

    .home header {
        transform: translateX(0%);
        background-color: transparent;
        left: 0;
    }

    #mobileToggle:checked + header {
        transform: translateX(0%);
    }
    section {
        margin-left: 0;
    }

    .mobile-nav {
        display: block;
        position: absolute;
        top: 50%;
        left: 100%;
        z-index: 10;
        transform: translate(0%, -50%);
        background-color: var(--slate-500);
        width: 1.5rem;
        height: 3rem;
        border-radius: 0 0.3rem 0.3rem 0;
        cursor: pointer;
    }
    .home .mobile-nav {
        display: none;
    }

    .mobile-nav::after {
        content: "";
        display: block;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%) rotate(270deg);
        width: 1.5rem;
        height: 1.5rem;
        background: url("/static/img/barr.svg") no-repeat center center / contain;
        transition: transform 0.3s ease-in-out;
    }
    #mobileToggle:checked + header .mobile-nav::after {
        transform: translate(-50%, -50%) rotate(90deg);
    }
}

.language {
    color: var(--slate-400);
}

.section-font-container:has(.no-result) {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
}
.section-font-container {
    padding: 2rem 3rem 2rem 2rem;
}
/* ... */

